tests/ui/g-route-policy-required.stderr
error[E0277]: `g::route(left, right)` arms must begin with a controller self-send
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ route arm must begin with a controller self-send
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmHead` is not implemented for `hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>`
help: the trait `hibana::global::program::source::BuildProgramSource` is implemented for `hibana::global::steps::RouteSteps<Left, Right>`
 --> src/global/program/source.rs
  |
  | / impl<Left, Right> BuildProgramSource for RouteSteps<Left, Right>
  | | where
  | |     Left: BuildProgramSource + RouteArmHead + RouteArmLoopHead,
  | |     Right: BuildProgramSource + RouteArmHead + RouteArmLoopHead + TailLoopControl,
  | |     <Left as RouteArmHead>::Controller:
  | |         SameRouteControllerRole<<Right as RouteArmHead>::Controller>,
  | |_____________________________________________________________________^
  = note: required for `hibana::global::steps::RouteSteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>, hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>>` to implement `hibana::global::program::source::BuildProgramSource`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, Steps>(program: &Program<Steps>) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     Steps: BuildProgramSource,
  |            ^^^^^^^^^^^^^^^^^^ required by this bound in `project`

error[E0277]: the trait bound `hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>: hibana::global::RouteArmLoopHead` is not satisfied
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ unsatisfied trait bound
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmLoopHead` is not implemented for `hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>`
help: the trait `hibana::global::program::source::BuildProgramSource` is implemented for `hibana::global::steps::RouteSteps<Left, Right>`
 --> src/global/program/source.rs
  |
  | / impl<Left, Right> BuildProgramSource for RouteSteps<Left, Right>
  | | where
  | |     Left: BuildProgramSource + RouteArmHead + RouteArmLoopHead,
  | |     Right: BuildProgramSource + RouteArmHead + RouteArmLoopHead + TailLoopControl,
  | |     <Left as RouteArmHead>::Controller:
  | |         SameRouteControllerRole<<Right as RouteArmHead>::Controller>,
  | |_____________________________________________________________________^
  = note: required for `hibana::global::steps::RouteSteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>, hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>>` to implement `hibana::global::program::source::BuildProgramSource`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, Steps>(program: &Program<Steps>) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     Steps: BuildProgramSource,
  |            ^^^^^^^^^^^^^^^^^^ required by this bound in `project`

error[E0277]: `g::route(left, right)` arms must begin with a controller self-send
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ route arm must begin with a controller self-send
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmHead` is not implemented for `hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>`
help: the trait `hibana::global::program::source::BuildProgramSource` is implemented for `hibana::global::steps::RouteSteps<Left, Right>`
 --> src/global/program/source.rs
  |
  | / impl<Left, Right> BuildProgramSource for RouteSteps<Left, Right>
  | | where
  | |     Left: BuildProgramSource + RouteArmHead + RouteArmLoopHead,
  | |     Right: BuildProgramSource + RouteArmHead + RouteArmLoopHead + TailLoopControl,
  | |     <Left as RouteArmHead>::Controller:
  | |         SameRouteControllerRole<<Right as RouteArmHead>::Controller>,
  | |_____________________________________________________________________^
  = note: required for `hibana::global::steps::RouteSteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>, hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>>` to implement `hibana::global::program::source::BuildProgramSource`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, Steps>(program: &Program<Steps>) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     Steps: BuildProgramSource,
  |            ^^^^^^^^^^^^^^^^^^ required by this bound in `project`

error[E0277]: the trait bound `hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>: hibana::global::RouteArmLoopHead` is not satisfied
 --> tests/ui/g-route-policy-required.rs:8:37
  |
8 |     let _: RoleProgram<0> = project(&route);
  |                             ------- ^^^^^^ unsatisfied trait bound
  |                             |
  |                             required by a bound introduced by this call
  |
  = help: the trait `hibana::global::RouteArmLoopHead` is not implemented for `hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>`
help: the trait `hibana::global::program::source::BuildProgramSource` is implemented for `hibana::global::steps::RouteSteps<Left, Right>`
 --> src/global/program/source.rs
  |
  | / impl<Left, Right> BuildProgramSource for RouteSteps<Left, Right>
  | | where
  | |     Left: BuildProgramSource + RouteArmHead + RouteArmLoopHead,
  | |     Right: BuildProgramSource + RouteArmHead + RouteArmLoopHead + TailLoopControl,
  | |     <Left as RouteArmHead>::Controller:
  | |         SameRouteControllerRole<<Right as RouteArmHead>::Controller>,
  | |_____________________________________________________________________^
  = note: required for `hibana::global::steps::RouteSteps<hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<3>, ()>>, hibana::global::steps::StepNil>, hibana::global::steps::StepCons<hibana::global::steps::SendStep<Role<0>, Role<1>, hibana::global::types::Message<hibana::global::types::LabelMarker<4>, ()>>, hibana::global::steps::StepNil>>` to implement `hibana::global::program::source::BuildProgramSource`
note: required by a bound in `hibana::integration::program::project`
 --> src/global/role_program/program.rs
  |
  | pub fn project<const ROLE: u8, Steps>(program: &Program<Steps>) -> RoleProgram<ROLE>
  |        ------- required by a bound in this function
  | where
  |     Steps: BuildProgramSource,
  |            ^^^^^^^^^^^^^^^^^^ required by this bound in `project`
